--- a/index.html
+++ b/index.html
@@ -82,10 +82,19 @@
     }
 
     .percentlogo {
+      font-style: italic;
       font-weight: bold;
       font-size: 150px;
-      color: rgb(179, 50, 11);
+      color: #e2ad1b;
       margin-top: 200px;
+      text-shadow: 2px 2px #000;
+    }
+
+    .sum_classic {
+      text-shadow: 1px 1px #000;
+      font-size: 18px;
+      font-weight: bolder;
+      color: #e2ad1b;
     }
   </style>
 
@@ -145,19 +154,13 @@
                               margin-top: 20px;
                             "
                           >
-                            <!-- <img
-                              class="percentlogo"
-                              src="image/percent.png"
-                              alt="15percent"
-                              width="50%"
-                            /> -->
                             <p class="percentlogo">
                               15%<sup style="font-size: 35px">Off</sup>
                             </p>
                           </td>
                           <!-- Right side -->
                           <td style="padding-left: 10px">
-                            <h3>SUMMER CLASSIC</h3>
+                            <h4 class="sum_classic">SUMMER CLASSIC</h4>
                             <p style="margin-top: 20px">
                               Lorem ipsum dolor sit amet consectetur adipisicing
                               elit. Vel, assumenda nisi. Sapiente molestiae
@@ -172,6 +175,8 @@
                 </table>
               </td>
             </tr>
+
+            <!-- Content part -->
           </table>
         </div>
       </div>
