--- a/index.html
+++ b/index.html
@@ -124,6 +124,17 @@
   .content-wrapper img {
     border: 1px solid #000;
   }
+
+  /* Bottom banner */
+  .bot-banner {
+    background-color: #face02;
+    height: 140px;
+  }
+
+  .bot-content a {
+    color: #ee8b80;
+    font-weight: bold;
+  }
 </style>
 
 <body>
@@ -199,8 +210,6 @@
           </tr>
 
           <!-- Content part -->
-
-
           <tr>
             <td style="padding: 20px 30px">
               <table style="border-collapse: collapse; width: 100%">
@@ -275,7 +284,57 @@
                     </table>
                   </td>
                 </tr>
+                <tr>
+                  <td style="padding-top: 15px;">
+                    <h4 style="text-align:center;">
+                      <a href="#" style=" color: rgb(34, 63, 131);">See more...</a>
+                    </h4>
+                  </td>
+                </tr>
               </table>
+            </td>
+          </tr>
+
+          <!-- Bottom Banner -->
+          <tr>
+            <td class="bot-banner">
+              <img src="image/bottombanner-text.png" alt="" width="100%" ;>
+            </td>
+          </tr>
+
+          <!-- Bottom Content -->
+          <tr>
+            <td>
+              <table style="border-collapse: collapse;width: 100%;">
+                <tr>
+                  <td>
+                    <table>
+                      <tr style="font-size: 14px; text-align: center; padding: 15px; display: block;">
+                        <td class="bot-content">
+                          <span><a href="#">unsubcribe</a> </span>
+                          <p style="display:inline-block;">from future marketing emails.</p>
+                          <a href="#">View Our Privacy Police</a><span
+                            style="border-right: 2px solid #aaa;">&nbsp</span>
+                          <a href="#">Forword to Friends</a>
+                        </td>
+                      </tr>
+                      <tr style="padding: 15px 70px 40px; display: block; font-size: 16px;">
+                        <td>
+                          <p>Shoes Newslatter ,123 fourth Street, Suite 101, New York, USA
+                          </p>
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+
+          <!-- bottom stripe style -->
+          <tr>
+            <td>
+              <img src="image/bottom_style.png" alt="bottom strip style" width="100%" style="padding:0px;">
             </td>
           </tr>
 
